manifest/objects/tinderbox__Document__c.object
<CustomObject>
    <description>Stores one record for each Octiv Proposal.  Use this instead of the old (TinderBox__Proposal__c) object, as it is a master-detail to the opportunity object.</description>
    <fields>
        <fullName>Source_Id__c</fullName>
        <externalId>true</externalId>
        <label>Source Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tinderbox__Accepted__c</fullName>
        <description>Date/Time the Document was Accepted</description>
        <label>Accepted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tinderbox__Access_Code__c</fullName>
        <description>Access Code when logging into public document.</description>
        <label>Access Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tinderbox__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tinderbox__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tinderbox__Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tinderbox__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tinderbox__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tinderbox__Document_Owner__c</fullName>
        <label>Document Owner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tinderbox__Document_Type__c</fullName>
        <description>Type of TinderBox Document: Proposal, Presentation, Contract.</description>
        <label>Document Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tinderbox__Last_Viewed__c</fullName>
        <label>Last Viewed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tinderbox__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tinderbox__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tinderbox__Public_URL__c</fullName>
        <description>URL for a Published Document</description>
        <label>Public URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>tinderbox__Published__c</fullName>
        <description>Date/Time the Document was Published</description>
        <label>Published</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tinderbox__Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tinderbox__TBAccount__c</fullName>
        <description>Octiv Account ID (Tied to Custom Setting Octiv Accounts)</description>
        <inlineHelpText>Octiv Account ID (Tied to Custom Setting Octiv Accounts)</inlineHelpText>
        <label>Octiv Account ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tinderbox__Template_Name__c</fullName>
        <label>Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tinderbox__TinderBoxId__c</fullName>
        <externalId>true</externalId>
        <label>Octiv Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tinderbox__Tracking_URL__c</fullName>
        <description>Link to Octiv Tracking Page</description>
        <label>Tracking URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>tinderbox__Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tinderbox__Views__c</fullName>
        <label>Views</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Octiv Document</label>
    <nameField>
        <label>Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Octiv Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>